Tue Feb 25 14:01:00 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* play.c - fix stupid blunder preventing tutor mode from seeing
	  any double/pass errors.

Mon Feb 24 23:03:00 UTC 2003  Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c - patch from Holger Bochnig to add navigation commands
 	  for next/previous unmarked move
	
Sun Feb 23 15:58:11 2003  Oystein Johansen <oystein@gnubg.org>

	* html.c (CommandExportPositionGammOnLine): Copy the file
	directly to the windows clipboard.

Fri Feb 21 23:29:42 UTC Jim Segrave <jes@jes-2.demon.nl>

	* backgammon.h, gnubg.c gtkboard.c, gtkgame.c, set.c
	  patches from Holger Bochnig to show legal destinations
	  when dragging checkers
	
Mon Feb 17 18:54:11 2003  Jim Segrave <jes@jes-2.demon.nl>

	* play.c: - fix so next marked finds errors on last play of game
	
Mon Feb  3 12:11:36 2003  Gary Wong  <gtw@gnu.org>

	* gtkboard.c (board_set): More fixes for dice positions -- set
	position independently of size when moving dice off board.

Thu Jan 30 18:52:34 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (InvalidateStoredMoves): new function.
	* play.c (CommandRoll): invalidate stored moves otherwise the
	shown hint may be wrong if the player goes back to a previous
	move and roll new dice.
	(reported by Billie Patterson)

Thu Jan 30 17:19:11 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (board_pointer): use board from current matchstate
	instead of current board show for click-bearoff-tray-to-bearoff.
	(reported by Holger Bochnig)

Thu Jan 30 17:13:30 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (board_set): make sure dice positions are calculated
	even though nSize < 0.
	(reported by Holger Bochnig)

Wed Jan 29 20:24:32 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (getResignation): resign single in money game with
	Jacoby rule and centered cube.
	(reported by Ric Gerace)

Wed Jan 29 20:02:10 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c, render.c: Show pseudo-cube on resignations.
